; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_ports_used.c_is_wakeuuid_set.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_ports_used.c_is_wakeuuid_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @is_wakeuuid_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_wakeuuid_set() #0 {
  %1 = call i64 @get_test_wake_uuid(i32* null)
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %6, label %3

3:                                                ; preds = %0
  %4 = call i64 @IOPMCopySleepWakeUUIDKey(i32* null, i32 0)
  %5 = icmp ne i64 %4, 0
  br label %6

6:                                                ; preds = %3, %0
  %7 = phi i1 [ true, %0 ], [ %5, %3 ]
  %8 = zext i1 %7 to i32
  ret i32 %8
}

declare dso_local i64 @get_test_wake_uuid(i32*) #1

declare dso_local i64 @IOPMCopySleepWakeUUIDKey(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
